# src/modules/team/infra/teams.routes.ts
@@ -5,6 +5,7 @@ import { CreateTeamController } from '../useCases/CreateTeam/CreateTeamControlle
 import { FindAllTeamsController } from '../useCases/FindAllTeams/FindAllTeamsController';
 import { FindMyTeamsController } from '../useCases/FindMyTeams/FindMyTeamsController';
 import { FindTeamByNameController } from '../useCases/FindTeamByName/FindTeamByNameController';
+import { FindTeamsImInController } from '../useCases/FindTeamsImIn/FindTeamsImInController';
 
 export const teamsRouter = Router();
 
@@ -13,6 +14,7 @@ const addUserToTeamController = new AddUserToTeamController();
 const findAllTeamsController = new FindAllTeamsController();
 const findTeamByNameController = new FindTeamByNameController();
 const findMyTeamsController = new FindMyTeamsController();
+const findTeamsImInController = new FindTeamsImInController();
 
 teamsRouter.post('/', createTeamController.handle);
 teamsRouter.post('/addUser', addUserToTeamController.handle);
@@ -20,3 +22,4 @@ teamsRouter.post('/addUser', addUserToTeamController.handle);
 teamsRouter.get('/', findAllTeamsController.handle);
 // teamsRouter.get('/findTeamByName', findTeamByNameController.handle);
 teamsRouter.get('/findMyTeams/:userId', findMyTeamsController.handle);
+teamsRouter.get('/findTeamsImIn/:userId', findTeamsImInController.handle);
